<?xml version="1.0" encoding="utf-8"?>
<ScrollView   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvResultForm"
            android:text="@string/hasil_pendaftaran"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:gravity="center"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tableLayoutForm"
            android:layout_marginTop="16dp"
            android:layout_below="@id/tvResultForm">

            <TableRow
                android:id="@+id/rowTitle"
                android:padding="4dp"
                android:background="@color/teal_200">
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nama" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/jenis_kelamin" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/alamat" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:maxWidth="50dp"
                    android:text="@string/nobp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:maxWidth="30dp"
                    android:text="@string/foto" />
            </TableRow>
        </TableLayout>

    </RelativeLayout>



</ScrollView>